Remove streamex dependency